# clepyd

./: README.md  manage.py  pyproject.toml
blog/: models.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: post_list.html
clepyd/: settings.py  urls.py  wsgi.py
clepyd/clepyd/: asgi.py  settings.py
