[tool.poetry]
name = "clepyd"
version = "0.1.0"
description = ""
authors = ["mutterberg <mutterberg@invoca.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"
pycodestyle = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
